--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	  	<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-12 col-md-10">
-					<strong class="section-category">Must Have Item 1</strong>
+					<strong class="section-category">Must Have Items 1</strong>
 					<h1 class="section-title">
 						데일리템
 					</h1>
@@ -136,7 +136,7 @@
 	  	<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-12 col-md-10">
-					<strong class="section-category">Must Have Item 2</strong>
+					<strong class="section-category">Must Have Items 2</strong>
 					<h1 class="section-title">
 						건강템
 					</h1>
@@ -167,6 +167,59 @@
 						<img src="./assets/pillow.jpg" alt="" />
 						<strong>
 							삼각쿠션
+						</strong>
+					</a>
+				</div>
+			</div>
+		</div>
+	  </section>
+	  <section class="program section">
+	  	<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-12 col-md-10">
+					<strong class="section-category">Must Play Games</strong>
+					<h1 class="section-title">
+						추천게임
+					</h1>
+					<p class=section-desc>
+						집에 있는 시간이 늘어나 게임을 많이 합니다. 대신 짧게 끊을 수 있는 게임을 합니다. 
+						<br />
+						최근 닌텐도 ds lite를 중고로 구매해 펜으로 하는 게임을 즐기고 있습니다.
+					</p>
+				</div>
+	  		</div>
+			<div class="row">
+				<div class="col-12 col-md-3">
+					<a href="#" class=program-card>
+						<img src="./assets/kingdomrush.png" alt="" />
+						<strong>
+							킹덤러쉬
+						</strong>
+						<p>디펜스 게임 입문!</p>
+					</a>
+				</div>
+				<div class="col-12 col-md-3">
+					<a href="#" class=program-card>
+						<img src="./assets/katanazero.jpg" alt="" />
+						<strong>
+							카타나 제로
+						</strong>
+						<p>사운드,그래픽,속도감 모두 훌륭한 스팀게임 !</p>
+					</a>
+				</div>
+				<div class="col-12 col-md-3">
+					<a href="#" class=program-card>
+						<img src="./assets/wariojpg.jpg" alt="" />
+						<strong>
+							닌텐도 ds 와리오
+						</strong>
+					</a>
+				</div>
+				<div class="col-12 col-md-3">
+					<a href="#" class=program-card>
+						<img src="./assets/zelda.jpg" alt="" />
+						<strong>
+							닌텐도 ds 젤다의 전설
 						</strong>
 					</a>
 				</div>
