--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 1</title>
-	  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+	  <link rel="preconnect" 	href="https://fonts.gstatic.com">
+	  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./grid.min.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -14,7 +14,7 @@
 		  <h1 class="banner-title">
 			<a href="#">
 			  Last Update			  
-			  21/01/16
+			  21/01/18
 			</a>
 		  </h1>
 	  </aside>
@@ -47,38 +47,30 @@
 			</div>
 	  </div>
 	  </section>
-	  <section class="about">
+	  <section class="program section ad">
 		  <div class="container">
 		  	<div class="row justify-content-center">
-		  		<div class="col-12 col-md-6">
-		  			<p>
-		  				(만드는중 ...)
-		  			</p>
-					<h2>
-						문화인류학 전공
-					</h2>
-					<p>
-						이러쿵저러쿵
-					</p>
-		  		</div>
 				<div class="col-12 col-md-6">
 					<h2>
-						리서치 회사
+						아래는 광고 페이지입니다.
 					</h2>
 					<p>
-						이러쿵저러쿵
+						해당 추천 상품에 관심있으신 분은 
+						<br />
+						슬랙 메세지나 아래 이메일로 문의주세요.
 					</p>
-		  		</div>
-				<div class="col-12 col-md-6">
-					<h2>
-						시립교육기관 메이커스페이스팀
-					</h2>
-					<ul class="dot-list">
-						<li>아동 놀이 공간 기획 및 운영</li>
-						<li>보드게임 및 플레이 키트 제작</li>
-						<li>재료 연구</li>
-						<li>공간 사용 연구</li>
-					</ul>
+					<a href="mailto: suna.namgung@gmail.com" title="내돈내산/정보나눔용/영업해드립니다." class="my-email">suna.namgung@gmail.com</a>
+					<div class="button-group ad">
+							<a href="#daily-items" class="fill-button">
+								데일리템
+							</a>
+							<a href="#health-items" class="fill-button">
+								건강템
+							</a>
+							<a href="#recommend-games" class="fill-button">
+								추천게임
+							</a>
+						</div>
 		  		</div>
 		  	</div>
 		  </div>
@@ -87,6 +79,8 @@
 	  	<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-12 col-md-10">
+					<a name="daily-items">
+					</a>
 					<strong class="section-category">Must Have Items 1</strong>
 					<h1 class="section-title">
 						데일리템
@@ -98,34 +92,34 @@
 	  		</div>
 			<div class="row">
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#daily-items" class=program-card>
 						<img src="./assets/WH1000XM3.png" alt="" />
 						<strong>
-							Bluetooth Headphone
+							블루투스 헤드셋
 						</strong>
 					</a>
 				</div>
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#daily-items" class=program-card>
 						<img src="./assets/drpepper.jpg" alt="" />
 						<strong>
-							Dr.Pepper
+							닥터페퍼
 						</strong>
 					</a>
 				</div>
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#daily-items" class=program-card>
 						<img src="./assets/potatochip.jpg" alt="" />
 						<strong>
-							Mutooktook
+							무뚝뚝 감자칩
 						</strong>
 					</a>
 				</div>
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#daily-items" class=program-card>
 						<img src="./assets/teapot.JPG" alt="" />
 						<strong>
-							Potable Tea Pot
+							휴대용 티팟
 						</strong>
 					</a>
 				</div>
@@ -136,6 +130,8 @@
 	  	<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-12 col-md-10">
+					<a name="health-items">
+					</a>
 					<strong class="section-category">Must Have Items 2</strong>
 					<h1 class="section-title">
 						건강템
@@ -147,7 +143,7 @@
 	  		</div>
 			<div class="row">
 				<div class="col-12 col-md-4">
-					<a href="#" class=program-card>
+					<a href="#health-items" class=program-card>
 						<img src="./assets/band.jpg" alt="" />
 						<strong>
 							허리 교정 밴드
@@ -155,7 +151,7 @@
 					</a>
 				</div>
 				<div class="col-12 col-md-4">
-					<a href="#" class=program-card>
+					<a href="#health-items" class=program-card>
 						<img src="./assets/deskstand.JPG" alt="" />
 						<strong>
 							스탠드
@@ -163,7 +159,7 @@
 					</a>
 				</div>
 				<div class="col-12 col-md-4">
-					<a href="#" class=program-card>
+					<a href="#health-items" class=program-card>
 						<img src="./assets/pillow.jpg" alt="" />
 						<strong>
 							삼각쿠션
@@ -177,6 +173,8 @@
 	  	<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-12 col-md-10">
+					<a name="recommend-games">
+					</a>
 					<strong class="section-category">Must Play Games</strong>
 					<h1 class="section-title">
 						추천게임
@@ -190,37 +188,39 @@
 	  		</div>
 			<div class="row">
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#recommend-games" class=program-card>
 						<img src="./assets/kingdomrush.png" alt="" />
 						<strong>
 							킹덤러쉬
 						</strong>
-						<p>디펜스 게임 입문!</p>
+						<p>디펜스 게임 명작!</p>
 					</a>
 				</div>
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#recommend-games" class=program-card>
 						<img src="./assets/katanazero.jpg" alt="" />
 						<strong>
 							카타나 제로
 						</strong>
-						<p>사운드,그래픽,속도감 모두 훌륭한 스팀게임 !</p>
+						<p>사운드,그래픽,속도감 모두 퍼펙트!</p>
 					</a>
 				</div>
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#recommend-games" class=program-card>
 						<img src="./assets/wariojpg.jpg" alt="" />
 						<strong>
 							닌텐도 ds 와리오
 						</strong>
+						<p>초스피드 게임 100개!</p>
 					</a>
 				</div>
 				<div class="col-12 col-md-3">
-					<a href="#" class=program-card>
+					<a href="#recommend-games" class=program-card>
 						<img src="./assets/zelda.jpg" alt="" />
 						<strong>
 							닌텐도 ds 젤다의 전설
 						</strong>
+						<p>펜으로 즐기는 젤다!</p>
 					</a>
 				</div>
 			</div>
